force-app/main/default/objects/Account/fields/AddrBuildingName__c.field-meta.xml
<CustomField>
    <fullName>AddrBuildingName__c</fullName>
    <label>ビル名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>