force-app/main/default/objects/Account/fields/address_seikyu1__c.field-meta.xml
<CustomField>
    <fullName>address_seikyu1__c</fullName>
    <label>請求先住所①</label>
    <length>255</length>
    <type>Text</type>
</CustomField>