force-app/main/default/objects/Account/fields/address_seikyu2__c.field-meta.xml
<CustomField>
    <fullName>address_seikyu2__c</fullName>
    <inlineHelpText>郵便番号から入れてください</inlineHelpText>
    <label>請求先住所②</label>
    <length>255</length>
    <type>Text</type>
</CustomField>