force-app/main/default/objects/Account/fields/address_seikyu3__c.field-meta.xml
<CustomField>
    <fullName>address_seikyu3__c</fullName>
    <label>請求先住所③</label>
    <length>255</length>
    <type>Text</type>
</CustomField>