force-app/main/default/objects/Account/fields/AddrOther__c.field-meta.xml
<CustomField>
    <fullName>AddrOther__c</fullName>
    <label>住所（その他）</label>
    <type>TextArea</type>
</CustomField>