force-app/main/default/objects/Account/fields/client_goal__c.field-meta.xml
<CustomField>
    <fullName>client_goal__c</fullName>
    <label>クライアント目標</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>