force-app/main/default/objects/Account/fields/client_last_updated__c.field-meta.xml
<CustomField>
    <fullName>client_last_updated__c</fullName>
    <label>最終更新日</label>
    <type>Date</type>
</CustomField>