force-app/main/default/objects/Account/fields/client_memo__c.field-meta.xml
<CustomField>
    <fullName>client_memo__c</fullName>
    <label>メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>