force-app/main/default/objects/Account/fields/CorpStatus__c.field-meta.xml
<CustomField>
    <fullName>CorpStatus__c</fullName>
    <label>法人格</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>株式会社</fullName>
            </value>
            <value>
                <fullName>有限会社</fullName>
            </value>
            <value>
                <fullName>公益社団法人</fullName>
            </value>
            <value>
                <fullName>公益財団法人</fullName>
            </value>
            <value>
                <fullName>一般社団法人</fullName>
            </value>
            <value>
                <fullName>一般財団法人</fullName>
            </value>
            <value>
                <fullName>独立行政法人</fullName>
            </value>
            <value>
                <fullName>合同会社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>