force-app/main/default/objects/Account/fields/CorpStatusPosition__c.field-meta.xml
<CustomField>
    <fullName>CorpStatusPosition__c</fullName>
    <label>法人格の位置</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>前</fullName>
            </value>
            <value>
                <fullName>後</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>