force-app/main/default/objects/Account/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>作成日時</label>
    <type>Date</type>
</CustomField>