force-app/main/default/objects/Account/fields/customers_type__c.field-meta.xml
<CustomField>
    <fullName>customers_type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>代理店フラグ</label>
    <type>Checkbox</type>
</CustomField>