force-app/main/default/objects/Account/fields/DBAccountTypeFlg__c.field-meta.xml
<CustomField>
    <fullName>DBAccountTypeFlg__c</fullName>
    <label>証券or運用会社orベンダor一般会社</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>証券</fullName>
            </value>
            <value>
                <fullName>運用会社</fullName>
            </value>
            <value>
                <fullName>ベンダ</fullName>
            </value>
            <value>
                <fullName>一般会社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>