force-app/main/default/objects/Account/fields/DbDescription__c.field-meta.xml
<CustomField>
    <fullName>DbDescription__c</fullName>
    <label>事業内容</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>