force-app/main/default/objects/Account/fields/DbEstablishedYear__c.field-meta.xml
<CustomField>
    <fullName>DbEstablishedYear__c</fullName>
    <label>設立年月</label>
    <length>6</length>
    <type>Text</type>
</CustomField>