force-app/main/default/objects/Account/fields/DbLastFiscalEnd__c.field-meta.xml
<CustomField>
    <fullName>DbLastFiscalEnd__c</fullName>
    <label>決算期</label>
    <length>6</length>
    <type>Text</type>
</CustomField>