force-app/main/default/objects/Account/fields/DbListedMarket__c.field-meta.xml
<CustomField>
    <fullName>DbListedMarket__c</fullName>
    <label>上場市場</label>
    <length>100</length>
    <type>Text</type>
</CustomField>