force-app/main/default/objects/Account/fields/DbNetIncome__c.field-meta.xml
<CustomField>
    <fullName>DbNetIncome__c</fullName>
    <label>当期利益</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>