force-app/main/default/objects/Account/fields/DbSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>DbSurveyDate__c</fullName>
    <label>調査時点</label>
    <length>6</length>
    <type>Text</type>
</CustomField>