force-app/main/default/objects/Account/fields/FlgAd__c.field-meta.xml
<CustomField>
    <fullName>FlgAd__c</fullName>
    <label>代理店or広告主フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>広告主</fullName>
            </value>
            <value>
                <fullName>代理店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>