force-app/main/default/objects/Account/fields/former_name1__c.field-meta.xml
<CustomField>
    <fullName>former_name1__c</fullName>
    <label>社名（備考①）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>