force-app/main/default/objects/Account/fields/former_name2__c.field-meta.xml
<CustomField>
    <fullName>former_name2__c</fullName>
    <label>社名（備考②）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>