force-app/main/default/objects/Account/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <label>業種分類（大分類）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>