force-app/main/default/objects/Account/fields/industry_middle__c.field-meta.xml
<CustomField>
    <fullName>industry_middle__c</fullName>
    <label>業種分類（中分類）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>