force-app/main/default/objects/Account/fields/industry_small__c.field-meta.xml
<CustomField>
    <fullName>industry_small__c</fullName>
    <label>業種分類（小分類）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>