force-app/main/default/objects/Account/fields/is_deleted__c.field-meta.xml
<CustomField>
    <fullName>is_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>取引禁止</label>
    <type>Checkbox</type>
</CustomField>