force-app/main/default/objects/Account/fields/kaigai_torihiki__c.field-meta.xml
<CustomField>
    <fullName>kaigai_torihiki__c</fullName>
    <defaultValue>false</defaultValue>
    <label>海外取引</label>
    <type>Checkbox</type>
</CustomField>