force-app/main/default/objects/Account/fields/kana__c.field-meta.xml
<CustomField>
    <fullName>kana__c</fullName>
    <label>カタカナ表記</label>
    <length>255</length>
    <type>Text</type>
</CustomField>