force-app/main/default/objects/Account/fields/MailExternalId__c.field-meta.xml
<CustomField>
    <fullName>MailExternalId__c</fullName>
    <externalId>true</externalId>
    <label>メール(外部ID)</label>
    <type>Email</type>
</CustomField>