force-app/main/default/objects/Account/fields/MarketoNotSyncPerson__c.field-meta.xml
<CustomField>
    <fullName>MarketoNotSyncPerson__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <label>Marketo同期対象外(個人取引先)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>