force-app/main/default/objects/Account/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>