force-app/main/default/objects/Account/fields/Oldcustomers_type__c.field-meta.xml
<CustomField>
    <fullName>Oldcustomers_type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old代理店フラグ</label>
    <type>Checkbox</type>
</CustomField>