force-app/main/default/objects/Account/fields/payment_term__c.field-meta.xml
<CustomField>
    <fullName>payment_term__c</fullName>
    <label>支払いサイト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>