force-app/main/default/objects/Account/fields/sales_staff__c.field-meta.xml
<CustomField>
    <fullName>sales_staff__c</fullName>
    <label>広告営業担当</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本多　正典</fullName>
            </value>
            <value>
                <fullName>山内　光之</fullName>
            </value>
            <value>
                <fullName>新津　尚男</fullName>
            </value>
            <value>
                <fullName>田中　健一</fullName>
            </value>
            <value>
                <fullName>斎藤　治子</fullName>
            </value>
            <value>
                <fullName>林　政孝</fullName>
            </value>
            <value>
                <fullName>白川　岳史</fullName>
            </value>
            <value>
                <fullName>小林　玉枝</fullName>
            </value>
            <value>
                <fullName>尾登　雄平</fullName>
            </value>
            <value>
                <fullName>星野　はる香</fullName>
            </value>
            <value>
                <fullName>佐藤　幹朗</fullName>
            </value>
            <value>
                <fullName>進藤　貴史</fullName>
            </value>
            <value>
                <fullName>原　野枝</fullName>
            </value>
            <value>
                <fullName>鈴木　奏子</fullName>
            </value>
            <value>
                <fullName>田邊　真男</fullName>
            </value>
            <value>
                <fullName>瓦野　晋治</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>