force-app/main/default/objects/Account/fields/syouken_code__c.field-meta.xml
<CustomField>
    <fullName>syouken_code__c</fullName>
    <label>証券コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>