force-app/main/default/objects/Account/fields/tenyuryoku__c.field-meta.xml
<CustomField>
    <fullName>tenyuryoku__c</fullName>
    <formula>IF ( ISBLANK ( user_id__c ) , False , True )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>手入力</label>
    <type>Checkbox</type>
</CustomField>