force-app/main/default/objects/Account/fields/ToyokeizaiId__c.field-meta.xml
<CustomField>
    <fullName>ToyokeizaiId__c</fullName>
    <externalId>true</externalId>
    <label>会員ID(東洋経済用会員ID)_</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>