force-app/main/default/objects/Account/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>最終更新日時</label>
    <type>Date</type>
</CustomField>