force-app/main/default/objects/Account/fields/web_site__c.field-meta.xml
<CustomField>
    <fullName>web_site__c</fullName>
    <label>WEBサイト</label>
    <type>Url</type>
</CustomField>