force-app/main/default/objects/Account/validationRules/Id_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Id_Lock</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( user_id__c)</errorConditionFormula>
    <errorMessage>クライアントIDは編集禁止です</errorMessage>
</ValidationRule>