force-app/main/default/objects/Account/listViews/View2.listView-meta.xml
<ListView>
    <fullName>View2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>MailExternalId__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PC_EMAIL</field>
        <operation>contains</operation>
        <value>@toyokeizai.net</value>
    </filters>
    <label>すべての個人取引先</label>
</ListView>